--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-torch
-numpy
-matplotlib
-scipy
+numpy>=1.20.0
+torch>=1.9.0
+scipy>=1.7.0
+matplotlib>=3.4.0
+tqdm>=4.60.0
+scikit-learn>=0.24.0
+pytest>=6.2.5
